--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 05 2023 22:50:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jul 08 2023 21:43:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-  <div class="section">
+  <div class="mainsection">
     <div class="container">
       <div class="intro-wrap">
         <div data-w-id="01b37a42-5ea5-e887-35c3-e3973cc99747" style="opacity:0" class="name_tittle">
@@ -50,29 +50,61 @@
   </div>
   <div class="section">
     <div id="works-grid" data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fa4" style="opacity:0" class="w-layout-grid works-grid">
-      <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-3fff4113">
-        <a href="work/project-1.html" class="link-block w-inline-block"></a>
+      <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-3fff4113" class="div-block-24">
+        <a href="work/project-1.html" class="link-block-copy w-inline-block">
+          <div class="hovershow">
+            <div class="text-block-4">Click to view</div>
+            <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
+                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+              </svg></div>
+          </div>
+        </a>
         <div class="work-description">
           <a href="work/project-1.html" class="project-name-link">Project 1<br></a>
-          <div class="paragraph-light">Full Stack Developement - Django</div>
+          <div class="paragraph-light">Full Stack Developement - Django / DevOP Amazon Web Services</div>
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-3fff4113">
-        <a href="work/project-2.html" class="link-block-2 w-inline-block"></a>
+        <a href="work/project-2.html" class="link-block-2 w-inline-block">
+          <div class="div-block-18">
+            <div class="text-block-4">Click to view</div>
+            <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
+                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+              </svg></div>
+          </div>
+        </a>
         <div class="work-description">
           <a href="work/project-2.html" class="project-name-link">Project 2</a>
           <div class="paragraph-light">Scripting / Software Engineering</div>
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fb4-3fff4113" class="div-block-6">
-        <a href="https://github.com/Ayokunlewaakinnawo/inventoryControl_DataAnalysis/blob/main/Script.ipynb" class="work-image cc-work-3 w-inline-block"></a>
+        <a href="https://github.com/Ayokunlewaakinnawo/inventoryControl_DataAnalysis/blob/main/Script.ipynb" class="work-image w-inline-block">
+          <div class="hovershow">
+            <div class="text-block-4">Click to view</div>
+            <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
+                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+              </svg></div>
+          </div>
+        </a>
         <div class="work-description">
-          <a href="work/project-3.html" class="project-name-link">Project 3 </a>
+          <a href="#" class="project-name-link">Project 3 </a>
           <div class="paragraph-light">Data Mining and Data Analysis</div>
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fbb-3fff4113" class="div-block-5">
-        <a href="https://github.com/Ayokunlewaakinnawo/Loan-Data-Analytics" class="work-image cc-work-4 w-inline-block"></a>
+        <a href="https://github.com/Ayokunlewaakinnawo/Loan-Data-Analytics" class="work-image cc-work-4 w-inline-block">
+          <div class="div-block-18">
+            <div class="text-block-4">Click to view</div>
+            <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
+                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+              </svg></div>
+          </div>
+        </a>
         <div class="work-description">
           <a href="#" class="project-name-link">Project 4</a>
           <div class="paragraph-light">Data Mining and Data Analysis</div>
@@ -81,7 +113,15 @@
     </div>
     <div id="works-grid" class="w-layout-grid secondwork">
       <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a4b-3fff4113" class="secondworkdiv">
-        <a href="https://github.com/Ayokunlewaakinnawo/voxshop" class="link-block-copy w-inline-block"></a>
+        <a href="https://github.com/Ayokunlewaakinnawo/voxshop" class="link-block-copy-copy w-inline-block">
+          <div class="div-block-18">
+            <div class="text-block-4">Click to view</div>
+            <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
+                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
+              </svg></div>
+          </div>
+        </a>
         <div class="work-description">
           <a href="#" class="project-name-link">Ecommerce Site Project<br></a>
           <div class="paragraph-light">Web Application Development</div>
