--- a/work/project-1.html
+++ b/work/project-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Jul 05 2023 22:50:17 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jul 08 2023 21:43:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f30ecff4118" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -41,9 +41,20 @@
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-ecff4118">
           <h1 class="heading-jumbo">Project 1</h1>
           <div class="paragraph-light">Web Application</div>
-          <a href="https://www.africadatafoundation.org" target="_blank" class="link-block-4 w-inline-block">
-            <div class="paragraph-light"><span class="text-span-11">Live site:</span> <span class="text-span-12">https://www.africadatafoundation.org</span><br></div>
-          </a>
+          <div class="link-block-4">
+            <a href="https://www.africadatafoundation.org" class="link-block-5 w-inline-block">
+              <div class="paragraph-light"><span class="text-span-11">Live site:</span> <span class="text-span-12">https://www.africadatafoundation.org</span><br></div>
+            </a>
+            <div>
+              <a href="https://github.com/Ayokunlewaakinnawo/adfonline" class="link-block-6 w-inline-block">
+                <div class="paragraph-light"><span class="text-span-11">Github repo :</span> <span class="text-span-12">https://github.com/Ayokunlewaakinnawo/adfonline</span><br></div>
+              </a>
+            </div>
+          </div>
+          <div class="div-block-23">
+            <h5>Skills &amp; Tools </h5>
+            <div data-w-id="30a3c090-a5c2-4f21-2a5e-f9c44883834e" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid project1skillset"><img src="../images/mp504x498mattef8f8f8t-pad600x600f8f8f8.jpg" srcset="../images/mp504x498mattef8f8f8t-pad600x600f8f8f8-p-500.jpg 500w, ../images/mp504x498mattef8f8f8t-pad600x600f8f8f8.jpg 600w" sizes="(max-width: 479px) 72px, (max-width: 767px) 15vw, 75px" width="75" alt="SkillImg"><img src="../images/image2-1.png.webp" srcset="../images/image2-1.png-p-500.webp 500w, ../images/image2-1.png.webp 600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 30vw, (max-width: 991px) 19vw, 150px" width="150" alt="SkillImg"><img src="../images/HTML5_logo_and_wordmark.svg.png" srcset="../images/HTML5_logo_and_wordmark.svg-p-500.png 500w, ../images/HTML5_logo_and_wordmark.svg.png 800w" width="80" sizes="(max-width: 479px) 76.79999542236328px, (max-width: 767px) 76.80000305175781px, 80px" alt="SkillImg"><img src="../images/python-django.png.webp" sizes="(max-width: 479px) 100vw, (max-width: 767px) 49vw, (max-width: 991px) 20vw, 22vw" srcset="../images/python-django.png-p-500.webp 500w, ../images/python-django.png-p-800.webp 800w, ../images/python-django.png-p-1080.webp 1080w, ../images/python-django.png-p-1600.webp 1600w, ../images/python-django.png-p-2000.webp 2000w, ../images/python-django.png.webp 2400w" alt="SkillImg"><img src="../images/JavaScript-logo.png" srcset="../images/JavaScript-logo-p-500.png 500w, ../images/JavaScript-logo.png 1052w" width="70" sizes="(max-width: 767px) 67.19999694824219px, 70px" alt="SkillImg"><img src="../images/nginx-default_featured-2020.png" width="120" alt="SkillImg"><img src="../images/Git-logo.svg.png" srcset="../images/Git-logo.svg-p-500.png 500w, ../images/Git-logo.svg-p-800.png 800w, ../images/Git-logo.svg-p-1080.png 1080w, ../images/Git-logo.svg.png 1280w" width="80" sizes="(max-width: 479px) 76.79999542236328px, (max-width: 767px) 76.80000305175781px, 80px" alt="SkillImg"></div>
+          </div>
         </div>
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-ecff4118">
           <div class="position-name-text">Project Overview</div>
@@ -58,9 +69,8 @@
   </div>
   <div class="gallery1">
     <div data-w-id="2a25cd45-26f6-19d4-1e30-79f3aa4a0e3e" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid brix---grid-gallery-v6">
-      <div class="brix---image-wrapper-br-24px"><img src="../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png" srcset="../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 500w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 800w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 1080w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 1600w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 2000w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 2600w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 2870w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 5979px) 48vw, 2870px" alt="" class="brix---image-3"></div>
-      <div class="brix---image-wrapper-br-24px"><img src="../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png" srcset="../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 500w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 800w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 1080w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 1600w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 2000w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 2600w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 2870w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 5979px) 48vw, 2870px" alt="" class="brix---image-3"></div>
-      <div id="w-node-_2a25cd45-26f6-19d4-1e30-79f3aa4a0e43-ecff4118" class="brix---image-wrapper-br-24px"></div>
+      <div class="brix---image-wrapper-br-24px"><img src="../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png" srcset="../images/Screen-Shot-2023-07-05-at-5.13.11-PM-p-500.png 500w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM-p-800.png 800w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM-p-1080.png 1080w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM-p-1600.png 1600w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM-p-2000.png 2000w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM-p-2600.png 2600w, ../images/Screen-Shot-2023-07-05-at-5.13.11-PM.png 2870w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 5979px) 48vw, 2870px" alt="adf" class="brix---image-3"></div>
+      <div class="brix---image-wrapper-br-24px"><img src="../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png" srcset="../images/Screen-Shot-2023-07-05-at-5.13.49-PM-p-500.png 500w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM-p-800.png 800w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM-p-1080.png 1080w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM-p-1600.png 1600w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM-p-2000.png 2000w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM-p-2600.png 2600w, ../images/Screen-Shot-2023-07-05-at-5.13.49-PM.png 2870w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 5979px) 48vw, 2870px" alt="adf" class="brix---image-3"></div>
     </div>
   </div>
   <div class="section">
@@ -85,7 +95,21 @@
   <div class="section">
     <div class="container">
       <div class="email-section">
-        <p>on my GitHub repository at;</p>
+        <p>Cick here to the Git repository:</p>
+        <a href="https://github.com/Ayokunlewaakinnawo?tab=repositories" class="w-inline-block">
+          <div class="html-embed-2 w-embed">
+            <?xml version="1.0" ?>
+            <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.0//EN' 'http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd'><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewbox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <path clip-rule="evenodd" d="M16.003,0C7.17,0,0.008,7.162,0.008,15.997  c0,7.067,4.582,13.063,10.94,15.179c0.8,0.146,1.052-0.328,1.052-0.752c0-0.38,0.008-1.442,0-2.777  c-4.449,0.967-5.371-2.107-5.371-2.107c-0.727-1.848-1.775-2.34-1.775-2.34c-1.452-0.992,0.109-0.973,0.109-0.973  c1.605,0.113,2.451,1.649,2.451,1.649c1.427,2.443,3.743,1.737,4.654,1.329c0.146-1.034,0.56-1.739,1.017-2.139  c-3.552-0.404-7.286-1.776-7.286-7.906c0-1.747,0.623-3.174,1.646-4.292C7.28,10.464,6.73,8.837,7.602,6.634  c0,0,1.343-0.43,4.398,1.641c1.276-0.355,2.645-0.532,4.005-0.538c1.359,0.006,2.727,0.183,4.005,0.538  c3.055-2.07,4.396-1.641,4.396-1.641c0.872,2.203,0.323,3.83,0.159,4.234c1.023,1.118,1.644,2.545,1.644,4.292  c0,6.146-3.74,7.498-7.304,7.893C19.479,23.548,20,24.508,20,26c0,2,0,3.902,0,4.428c0,0.428,0.258,0.901,1.07,0.746  C27.422,29.055,32,23.062,32,15.997C32,7.162,24.838,0,16.003,0z" fill="#181616" fill-rule="evenodd"></path>
+              <g>
+              <g>
+              <g>
+              <g>
+              <g>
+              <g>
+            </g></g></g></g></g></g></svg>
+          </div>
+        </a>
       </div>
     </div>
   </div>
