--- a/work/project-2.html
+++ b/work/project-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Jul 08 2023 21:43:54 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 09 2023 17:20:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f0f82ff4119" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -26,9 +26,9 @@
       <div class="navigation-wrap">
         <nav role="navigation" class="navigation-items w-nav-menu">
           <a href="../index.html" class="navigation-item w-nav-link">Home</a>
-          <a href="#" class="navigation-item w-nav-link">work</a>
-          <a href="#" class="navigation-item w-nav-link">About</a>
-          <a href="#" class="navigation-item w-nav-link">Contact me</a>
+          <a href="../index.html#works-grid" class="navigation-item w-nav-link">work</a>
+          <a href="../index.html#about" class="navigation-item w-nav-link">About</a>
+          <a href="../index.html#contact_me" class="navigation-item w-nav-link">Contact me</a>
           <a href="../resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
         <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="Hamburger" class="menu-icon"></div>
