--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
       <div class="intro-wrap">
         <div data-w-id="01b37a42-5ea5-e887-35c3-e3973cc99747" style="opacity:0" class="name_tittle">
           <div class="name-text">Ayo Akinnawo</div>
-          <div class="paragraph-light">Web Developer, Data Analyst/Engineer</div>
+          <div class="paragraph-light">Full Stack Developer, Data Analyst/Engineer</div>
         </div>
-        <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span class="text-span">Web Developer,</span> Data Scientist based in Dallas, TX. </h1>
+        <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span class="text-span">Full Stack Software Developer</span> Data Scientist based in Dallas, TX. </h1>
       </div>
     </div>
   </div>
   <div class="section">
+
+
     <div id="works-grid" data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fa4" style="opacity:0" class="w-layout-grid works-grid">
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-3fff4113" class="div-block-24">
         <a href="work/project-1.html" class="link-block-copy w-inline-block">
@@ -66,7 +68,7 @@
         </div>
       </div>
       <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fad-3fff4113">
-        <a href="work/project-2.html" class="link-block-2 w-inline-block">
+        <a href="work/project-2.html" class="link-block-2-copy w-inline-block">
           <div class="div-block-18">
             <div class="text-block-4">Click to view</div>
             <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
@@ -113,9 +115,9 @@
     </div>
     <div id="works-grid" class="w-layout-grid secondwork">
       <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a4b-3fff4113" class="secondworkdiv">
-        <a href="https://github.com/Ayokunlewaakinnawo/voxshop" class="link-block-copy-copy w-inline-block">
+        <a href="https://shop.voxtechnologies.com" target="_blank" class="link-block-copy-copy w-inline-block">
           <div class="div-block-18">
-            <div class="text-block-4">Click to view</div>
+            <div class="text-block-4">Click to view Live Site</div>
             <div class="w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye-fill" viewbox="0 0 16 16">
                 <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
                 <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
@@ -127,14 +129,17 @@
           <div class="paragraph-light">Web Application Development</div>
         </div>
       </div>
-      <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a53-3fff4113" class="div-block-7">
-        <a href="work/project-2.html" class="link-block-2 w-inline-block"></a>
+      <div id="w-node-_0a3be501-d9d1-bac0-2047-e21450cd4a53-3fff4113" class="div-block-7-copy">
+        <a href="https://relevant-technologies.com" target="_blank" class="link-block-2 w-inline-block"></a>
         <div class="work-description">
           <a href="work/project-2.html" class="project-name-link">Project 2</a>
           <div class="paragraph-light">Scripting / Software Engineering</div>
         </div>
       </div>
     </div>
+    
+
+
     <section id="about">
       <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
         <div class="div-block-17">
