--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="name-text">Ayo Akinnawo</div>
           <div class="paragraph-light">Full Stack Developer, Data Analyst/Engineer</div>
         </div>
-        <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span class="text-span">Full Stack Software Developer</span> Data Scientist based in Dallas, TX. </h1>
+        <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span class="text-span">Full Stack Software Engineer/span>based in Dallas, TX. </h1>
       </div>
     </div>
   </div>
