--- a/resume.html
+++ b/resume.html
@@ -76,7 +76,7 @@
             <div>
               <div class="div-block-13"><img src="images/IMG_0005.jpg" loading="lazy" width="70" sizes="(max-width: 479px) 67vw, 70px" alt="ProfilePic" srcset="images/IMG_0005-p-500.jpg 500w, images/IMG_0005-p-800.jpg 800w, images/IMG_0005-p-1080.jpg 1080w, images/IMG_0005.jpg 2512w" class="image-4">
                 <div class="text-block-5">Ayo Akinnawo</div>
-                <div>Python developer, Data Science</div>
+                <div> Software Engineer, Data Scientist</div>
                 <a href="mailto:aymail32@gmail.com" class="w-inline-block">
                   <div>aymail32@gmail.com</div>
                 </a>
