--- a/401.html
+++ b/401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 09 2023 17:20:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 17:38:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0fbd0aff4114" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Inconsolata:400,700","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -23,7 +23,7 @@
   <div class="protected-wrap">
     <div class="w-password-page w-form">
       <form action="/.wf_auth" method="post" id="email-form" name="email-form" data-name="Email Form" class="protected-form w-password-page" data-wf-page-id="641b5e72069a0fbd0aff4114" data-wf-element-id="5c6e8c1c02532310d0ddcec700000000000c">
-        <h2 class="protected-heading">Protected Page</h2><input type="password" class="text-field w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" id="field"><input type="submit" value="Submit" data-wait="Please wait..." class="button w-password-page w-button">
+        <h2 class="protected-heading">Protected Page</h2><input class="text-field w-password-page w-input" autofocus="true" maxlength="256" name="pass" data-name="field" placeholder="Enter your password" type="password" id="field"><input type="submit" data-wait="Please wait..." class="button w-password-page w-button" value="Submit">
         <div class="status-message cc-error-message w-password-page w-form-fail">
           <div>Incorrect password. Please try again.</div>
         </div>
