--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 17:38:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 18:03:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -480,7 +480,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a0637" href="#" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, 28vw" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a063d" href="work/software-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Software Engineering</h3>
@@ -493,7 +493,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="10fa1d7b-7526-1d5e-bcac-9aa3955cd64b" href="#" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, 28vw" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="7ff0dd77-b44b-56b3-eba3-4829d3bf908c" href="#" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Developmment Operations</h3>
@@ -506,7 +506,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="388a6fef-e8c8-c66e-eb35-064765cd7f25" href="#" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, 28vw" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="e33f4dd5-18e5-bba3-b938-793283def615" href="#" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Scripting</h3>
@@ -519,7 +519,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="ea96b599-a98a-9a51-528f-5bf8d18f8437" href="#" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, 28vw" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="c0f63314-3364-561b-f6ca-281a9269e13f" href="#" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Data Engineering and Science</h3>
@@ -586,7 +586,7 @@ height: 0.625rem;
             <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
           </div>
           <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-130"><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, 95px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
+            <div class="div-block-130"><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
             <div class="paragraph-light cc-position-name">Data Analytical Engineer</div>
             <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
           </div>
@@ -607,10 +607,10 @@ height: 0.625rem;
         </div>
       </div>
     </section>
-    <div>
+    <div class="div-block-142">
       <h2 class="heading-2">Skills</h2>
       <div class="div-block-134">
-        <div id="w-node-_3ed4391a-a6b1-9032-3896-436806f77644-3fff4113"><img src="images/image-2.webp" loading="lazy" alt="">
+        <div id="w-node-_3ed4391a-a6b1-9032-3896-436806f77644-3fff4113" class="div-block-138"><img src="images/image-2.webp" loading="lazy" alt="" class="image-8">
           <div class="div-block-135">
             <a href="#" class="link underline-fill w-inline-block">
               <div class="text-block-15">Cloud Computing</div>
@@ -656,7 +656,7 @@ height: 0.625rem;
             <div class="paragraph-light cc-position-name">Google GCP, AWS</div>
           </div>
         </div>
-        <div id="w-node-_267482de-6486-dccb-9d5e-7c47287b4a2a-3fff4113"><img src="images/image-3.webp" loading="lazy" alt="" class="image-7">
+        <div id="w-node-_267482de-6486-dccb-9d5e-7c47287b4a2a-3fff4113" class="div-block-141"><img src="images/image-3.webp" loading="lazy" alt="" class="image-7">
           <div class="div-block-135">
             <a href="#" class="link underline-fill w-inline-block">
               <div class="text-block-15">Websites</div>
@@ -702,7 +702,7 @@ height: 0.625rem;
             <div class="paragraph-light cc-position-name">Modern, Responsive</div>
           </div>
         </div>
-        <div id="w-node-_130042ac-8736-ce86-65f5-14f38e73fe88-3fff4113"><img src="images/image.webp" loading="lazy" alt="">
+        <div id="w-node-_130042ac-8736-ce86-65f5-14f38e73fe88-3fff4113" class="div-block-139"><img src="images/image.webp" loading="lazy" alt="" class="image-9">
           <div class="div-block-135">
             <a href="#" class="link underline-fill w-inline-block">
               <div class="text-block-15">API Integrations</div>
@@ -748,7 +748,7 @@ height: 0.625rem;
             <div class="paragraph-light cc-position-name">Machine Learning, OpenAI</div>
           </div>
         </div>
-        <div id="w-node-bdc965fb-f38a-ac12-117d-98ffaa58dbb0-3fff4113"><img src="images/image-4.webp" loading="lazy" alt="">
+        <div id="w-node-bdc965fb-f38a-ac12-117d-98ffaa58dbb0-3fff4113" class="div-block-140"><img src="images/image-4.webp" loading="lazy" alt="" class="image-10">
           <div class="div-block-135">
             <a href="#" class="link underline-fill w-inline-block">
               <div class="text-block-15">UX Research</div>
@@ -803,7 +803,7 @@ height: 0.625rem;
       </div>
       <div class="w-layout-grid work-experience-grid">
         <div id="w-node-bf7eff07-8f15-6379-ef31-97e9b604d474-3fff4113" class="work-eduposition-wrap">
-          <div class="div-block"><img src="images/10.png" loading="lazy" sizes="(max-width: 479px) 100vw, 95px" width="95" alt="schlLogo" srcset="images/10-p-500.png 500w, images/10.png 600w"></div>
+          <div class="div-block"><img src="images/10.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" width="95" alt="schlLogo" srcset="images/10-p-500.png 500w, images/10.png 600w"></div>
           <div class="paragraph-light cc-position-name"><span class="text-span-2">Harrisburg University of Sci &amp; Tech.<br></span><span class="text-span-3">Masters of Science</span></div>
           <div class="paragraph-tiny cc-paragraph-tiny-light">Computer Science with conc. in Cybersecurity<br></div>
         </div>
