--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 18:03:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 19:08:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -26,7 +26,7 @@
     <div class="navigation-items">
       <div class="div-block-136">
         <a href="index.html" aria-current="page" class="link split-underline w-inline-block w--current">
-          <div class="text-block-14">Ayo | I-YOUR </div>
+          <div class="text-block-14">Ayo | EYE-YOUR </div>
           <div class="custom-styles w-embed">
             <style>
 .split-underline::before {
@@ -340,7 +340,7 @@
     <div id="w-node-de629e14-39ff-cb9d-9c5a-09661a075203-3fff4113" class="div-block-127"><img src="images/796aa837a81f3cf2b7eb363150d4d62c.gif" loading="lazy" style="opacity:0" data-w-id="933c31ba-b3ea-30f4-2e76-2b47214af284" alt=""></div>
   </div>
   <div class="scroll_dwn">
-    <a href="#work" class="w-inline-block">
+    <a href="#work" class="link-block-7 w-inline-block">
       <div class="html-embed-6 w-embed">
         <a href="#">
           <div id="mouse-scroll">
@@ -479,7 +479,7 @@
               <div class="uui-blogsection12_mask w-slider-mask">
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
-                    <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a0637" href="#" class="uui-blogsection12_image-link w-inline-block">
+                    <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a0637" href="work/software-engineering.html" class="uui-blogsection12_image-link w-inline-block">
                       <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a063d" href="work/software-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
@@ -492,10 +492,10 @@
                 </div>
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
-                    <a data-w-id="10fa1d7b-7526-1d5e-bcac-9aa3955cd64b" href="#" class="uui-blogsection12_image-link w-inline-block">
+                    <a data-w-id="10fa1d7b-7526-1d5e-bcac-9aa3955cd64b" href="work/development-operations.html" class="uui-blogsection12_image-link w-inline-block">
                       <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
-                    <a data-w-id="7ff0dd77-b44b-56b3-eba3-4829d3bf908c" href="#" class="uui-blogsection12_title-link-copy w-inline-block">
+                    <a data-w-id="7ff0dd77-b44b-56b3-eba3-4829d3bf908c" href="work/development-operations.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Developmment Operations</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="CurrentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -505,10 +505,10 @@
                 </div>
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
-                    <a data-w-id="388a6fef-e8c8-c66e-eb35-064765cd7f25" href="#" class="uui-blogsection12_image-link w-inline-block">
+                    <a data-w-id="388a6fef-e8c8-c66e-eb35-064765cd7f25" href="work/scripting.html" class="uui-blogsection12_image-link w-inline-block">
                       <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
                     </a>
-                    <a data-w-id="e33f4dd5-18e5-bba3-b938-793283def615" href="#" class="uui-blogsection12_title-link-copy w-inline-block">
+                    <a data-w-id="e33f4dd5-18e5-bba3-b938-793283def615" href="work/scripting.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Scripting</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="CurrentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -518,11 +518,24 @@
                 </div>
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
-                    <a data-w-id="ea96b599-a98a-9a51-528f-5bf8d18f8437" href="#" class="uui-blogsection12_image-link w-inline-block">
+                    <a data-w-id="ea96b599-a98a-9a51-528f-5bf8d18f8437" href="work/data-science-engineering.html" class="uui-blogsection12_image-link w-inline-block">
                       <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
-                    <a data-w-id="c0f63314-3364-561b-f6ca-281a9269e13f" href="#" class="uui-blogsection12_title-link-copy w-inline-block">
+                    <a data-w-id="c0f63314-3364-561b-f6ca-281a9269e13f" href="work/data-science-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Data Engineering and Science</h3>
+                      <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7 17L17 7M17 7H7M17 7V17" stroke="CurrentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg></div>
+                    </a>
+                  </div>
+                </div>
+                <div class="uui-blogsection12_slide w-slide">
+                  <div class="uui-blogsection12_item">
+                    <a data-w-id="bb9591cf-636f-aa29-5c20-7f6e92eb8da4" href="work/others.html" class="uui-blogsection12_image-link w-inline-block">
+                      <div class="uui-blogsection12_image-wrapper"><img src="images/27306d11a5a28156ebf4165e5ae78daa.png" loading="lazy" alt="" class="uui-blogsection12_image"></div>
+                    </a>
+                    <a data-w-id="bb9591cf-636f-aa29-5c20-7f6e92eb8da7" href="work/others.html" class="uui-blogsection12_title-link-copy w-inline-block">
+                      <h3 class="uui-heading-xsmall-12-copy">Others</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="CurrentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg></div>
@@ -564,48 +577,6 @@ height: 0.625rem;
           </div>
         </div>
       </section>
-    </section>
-    <section id="about">
-      <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
-        <div class="div-block-17">
-          <div class="carrer-headline-wrap">
-            <h2 class="heading-2">Professional Experience</h2>
-            <p class="paragraph-light">Experienced data scientist with a strong foundation in leveraging different tech stack in developing robust application. </p>
-          </div>
-          <a href="resume.html" class="div-block-16 w-inline-block">
-            <div>View Resume </div>
-            <div class="html-embed-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up-right-circle" viewbox="0 0 16 16">
-                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"></path>
-              </svg></div>
-          </a>
-        </div>
-        <div class="w-layout-grid work-experience-grid">
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-132"><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="125" id="w-node-_858baa71-2f64-b04b-7c82-88a7c54f9646-3fff4113" alt="WrkLogo"></div>
-            <div class="paragraph-light cc-position-name">Software Developement Engineer</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
-          </div>
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-130"><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
-            <div class="paragraph-light cc-position-name">Data Analytical Engineer</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
-          </div>
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-131"><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="135" alt="SchlIcon"></div>
-            <div class="paragraph-light cc-position-name">Graduate Student Assistant </div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">May 2019— Nov 2019<br></div>
-          </div>
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-3fff4113" class="work-eduposition-wrap">
-            <div>
-              <div class="div-block-129"><img src="images/Artboard_1.png" loading="lazy" alt="WrkLogo" width="70"></div>
-            </div>
-            <div class="paragraph-light cc-position-name">Software Engineer<br><span class="text-span-4">Python DevOp Engineer</span></div>
-            <div class="div-block-2">
-              <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2019 — Present <br></div>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
     <div class="div-block-142">
       <h2 class="heading-2">Skills</h2>
@@ -796,6 +767,48 @@ height: 0.625rem;
         </div>
       </div>
     </div>
+    <section id="about">
+      <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
+        <div class="div-block-17">
+          <div class="carrer-headline-wrap">
+            <h2 class="heading-2">Professional Experience</h2>
+            <p class="paragraph-light">Experienced data scientist with a strong foundation in leveraging different tech stack in developing robust application. </p>
+          </div>
+          <a href="resume.html" class="div-block-16 w-inline-block">
+            <div>View Resume </div>
+            <div class="html-embed-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up-right-circle" viewbox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"></path>
+              </svg></div>
+          </a>
+        </div>
+        <div class="w-layout-grid work-experience-grid">
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-3fff4113" class="work-eduposition-wrap">
+            <div class="div-block-132"><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="125" id="w-node-_858baa71-2f64-b04b-7c82-88a7c54f9646-3fff4113" alt="WrkLogo"></div>
+            <div class="paragraph-light cc-position-name">Software Developement Engineer</div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
+          </div>
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-3fff4113" class="work-eduposition-wrap">
+            <div class="div-block-130"><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
+            <div class="paragraph-light cc-position-name">Data Analytical Engineer</div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
+          </div>
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-3fff4113" class="work-eduposition-wrap">
+            <div class="div-block-131"><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="135" alt="SchlIcon"></div>
+            <div class="paragraph-light cc-position-name">Graduate Student Assistant </div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">May 2019— Nov 2019<br></div>
+          </div>
+          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-3fff4113" class="work-eduposition-wrap">
+            <div>
+              <div class="div-block-129"><img src="images/Artboard_1.png" loading="lazy" alt="WrkLogo" width="70"></div>
+            </div>
+            <div class="paragraph-light cc-position-name">Software Engineer<br><span class="text-span-4">Python DevOp Engineer</span></div>
+            <div class="div-block-2">
+              <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2019 — Present <br></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <div data-w-id="bf7eff07-8f15-6379-ef31-97e9b604d463" style="opacity:0" class="container">
       <div class="carrer-headline-wrap">
         <h2 class="heading-2">Education Background</h2>
