--- a/work/project-2.html
+++ b/work/project-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 18:03:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 19:08:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f0f82ff4119" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div class="navigation-items">
       <div class="div-block-136">
         <a href="../index.html" class="link split-underline w-inline-block">
-          <div class="text-block-14">Ayo | I-YOUR </div>
+          <div class="text-block-14">Ayo | EYE-YOUR </div>
           <div class="custom-styles w-embed">
             <style>
 .split-underline::before {
@@ -263,7 +263,7 @@
           </div>
           <div class="div-block-23">
             <h5>Skills &amp; Tools </h5>
-            <div data-w-id="d63b1b0c-514e-01bc-fc2c-b6dfc6ecdacb" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid project1skillset"><img src="../images/image2-1.png.webp" srcset="../images/image2-1.png-p-500.webp 500w, ../images/image2-1.png.webp 600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 29vw, (max-width: 991px) 19vw, 150px" width="150" alt="SkillImg"><img src="../images/python-logo-master-v3-TM-flattened.png" srcset="../images/python-logo-master-v3-TM-flattened-p-500.png 500w, ../images/python-logo-master-v3-TM-flattened.png 601w" width="150" sizes="(max-width: 479px) 100vw, (max-width: 767px) 29vw, (max-width: 991px) 19vw, 150px" alt="SkillImg"><img src="../images/Git-logo.svg.png" srcset="../images/Git-logo.svg-p-500.png 500w, ../images/Git-logo.svg-p-800.png 800w, ../images/Git-logo.svg-p-1080.png 1080w, ../images/Git-logo.svg.png 1280w" width="80" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16vw, 80px" alt="SkillImg"></div>
+            <div data-w-id="d63b1b0c-514e-01bc-fc2c-b6dfc6ecdacb" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid project1skillset"><img src="../images/image2-1.png.webp" srcset="../images/image2-1.png-p-500.webp 500w, ../images/image2-1.png.webp 600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 29vw, (max-width: 991px) 19vw, 150px" width="150" alt="SkillImg"><img src="../images/python-logo-master-v3-TM-flattened.png" srcset="../images/python-logo-master-v3-TM-flattened-p-500.png 500w, ../images/python-logo-master-v3-TM-flattened.png 601w" width="150" sizes="(max-width: 479px) 100vw, (max-width: 767px) 29vw, (max-width: 991px) 19vw, 150px" alt="SkillImg"><img src="../images/Git-logo.svg.png" srcset="../images/Git-logo.svg-p-500.png 500w, ../images/Git-logo.svg-p-800.png 800w, ../images/Git-logo.svg-p-1080.png 1080w, ../images/Git-logo.svg.png 1280w" width="80" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16vw, (max-width: 1279px) 80px, (max-width: 1439px) 6vw, 80px" alt="SkillImg"></div>
           </div>
         </div>
         <div id="w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-82ff4119">
@@ -278,7 +278,7 @@
     </div>
   </div>
   <div class="section">
-    <div class="div-block-4"><img src="../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png" srcset="../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-500.png 500w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-800.png 800w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1080.png 1080w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1600.png 1600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2000.png 2000w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2600.png 2600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png 2836w" alt="PortfolioImg" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1279px) 95vw, 99vw" class="detail-header-image"></div>
+    <div class="div-block-4"><img src="../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png" srcset="../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-500.png 500w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-800.png 800w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1080.png 1080w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-1600.png 1600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2000.png 2000w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM-p-2600.png 2600w, ../images/Screen-Shot-2023-04-05-at-1.50.48-PM.png 2836w" alt="PortfolioImg" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1279px) 95vw, (max-width: 1439px) 96vw, (max-width: 1919px) 97vw, 99vw" class="detail-header-image"></div>
   </div>
   <div class="section">
     <div class="container">
@@ -292,7 +292,7 @@
       </div>
     </div>
   </div>
-  <div class="section"><img src="../images/ezgif.com-video-to-gif-2.gif" width="920" alt="PortfolioImg" class="detail-image"><img src="../images/port1.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1279px) 95vw, 99vw" srcset="../images/port1-p-500.png 500w, ../images/port1-p-800.png 800w, ../images/port1-p-1080.png 1080w, ../images/port1.PNG 1920w" alt="PortfolioImg" class="detail-image"><img src="../images/port2.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1279px) 95vw, 99vw" srcset="../images/port2-p-500.png 500w, ../images/port2-p-800.png 800w, ../images/port2-p-1080.png 1080w, ../images/port2.PNG 1920w" alt="PortfolioImg" class="detail-image"></div>
+  <div class="section"><img src="../images/ezgif.com-video-to-gif-2.gif" width="920" alt="PortfolioImg" class="detail-image"><img src="../images/port1.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1279px) 95vw, (max-width: 1439px) 96vw, (max-width: 1919px) 97vw, 99vw" srcset="../images/port1-p-500.png 500w, ../images/port1-p-800.png 800w, ../images/port1-p-1080.png 1080w, ../images/port1.PNG 1920w" alt="PortfolioImg" class="detail-image"><img src="../images/port2.PNG" width="920" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, (max-width: 1279px) 95vw, (max-width: 1439px) 96vw, (max-width: 1919px) 97vw, 99vw" srcset="../images/port2-p-500.png 500w, ../images/port2-p-800.png 800w, ../images/port2-p-1080.png 1080w, ../images/port2.PNG 1920w" alt="PortfolioImg" class="detail-image"></div>
   <div class="section">
     <div class="container">
       <div class="email-section">
