--- a/work/scripting.html
+++ b/work/scripting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 18:03:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 19:08:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e210575accd2af2044ea3c" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -19,12 +19,12 @@
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body class="body-12">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
     <div class="navigation-items">
       <div class="div-block-136">
         <a href="../index.html" class="link split-underline w-inline-block">
-          <div class="text-block-14">Ayo | I-YOUR </div>
+          <div class="text-block-14">Ayo | EYE-YOUR </div>
           <div class="custom-styles w-embed">
             <style>
 .split-underline::before {
@@ -260,17 +260,17 @@
             </div>
             <div class="w-layout-grid uui-team10_list-2">
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img srcset="../images/0_FSZ330S1hKorTBOn-p-500.png 500w, ../images/0_FSZ330S1hKorTBOn-p-800.png 800w, ../images/0_FSZ330S1hKorTBOn-p-1080.png 1080w, ../images/0_FSZ330S1hKorTBOn.png 1200w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, 63vw" src="../images/0_FSZ330S1hKorTBOn.png" alt="" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Proj.2--p-500.png 500w, ../images/Proj.2--p-800.png 800w, ../images/Proj.2-.png 1048w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Proj.2-.png" alt="PortfolioImg" class="uui-team10_image-2"></div>
                 <div class="div-block-126">
                   <div class="uui-heading-tiny-9">
-                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="#" class="uui-blogsection12_title-link w-inline-block">
-                      <h3 class="uui-heading-xsmall-12">Documentations</h3>
+                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="../work/project-2.html" class="uui-blogsection12_title-link w-inline-block">
+                      <h3 class="uui-heading-xsmall-12">File Directory Scripting</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg></div>
                     </a>
                   </div>
-                  <div class="uui-text-size-medium-26 text-color-primary700">www.medium.com/@aymail32</div>
+                  <div class="uui-text-size-medium-26 text-color-primary700">Watermark and remove bg in photo</div>
                 </div>
               </div>
             </div>
