--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio - Webflow HTML website template</title>
+  <title>Ayo's Portfolio</title>
   <meta content="Portfolio - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
