--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 19:08:51 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 19:48:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
   <title>Ayo's Portfolio</title>
-  <meta content="Portfolio - Webflow HTML website template" property="og:title">
+  <meta content="Ayo's Portfolio" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="twitter:image">
@@ -256,7 +256,7 @@
         <div class="intro-wrap">
           <div data-w-id="01b37a42-5ea5-e887-35c3-e3973cc99747" style="opacity:0" class="name_tittle">
             <a href="#" class="link curved-underline w-inline-block">
-              <div>Ayo Akinnawo</div>
+              <div class="text-block-17">Ayo Akinnawo</div>
               <div class="line-graphic w-embed"><svg class="link__graphic link__graphic--stroke link__graphic--arc" width="100%" height="18" viewbox="0 0 59 18">
                   <path d="M.945.149C12.3 16.142 43.573 22.572 58.785 10.842" pathlength="1"></path>
                 </svg></div>
@@ -767,7 +767,7 @@ height: 0.625rem;
         </div>
       </div>
     </div>
-    <section id="about">
+    <section id="about" class="section-3">
       <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
         <div class="div-block-17">
           <div class="carrer-headline-wrap">
