--- a/work/software-engineering.html
+++ b/work/software-engineering.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 19:08:51 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 19:48:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e14ad4f7f059d1a85fa108" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -303,7 +303,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/web_1920___3_4x.png" alt="" srcset="../images/web_1920___3_4x.png 500w, ../images/web_1920___3_4x.png 800w, ../images/web_1920___3_4x.png 1080w, ../images/web_1920___3_4x.png 1281w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/web_1920___3_4x.png" alt="" srcset="../images/web_1920___3_4x-p-500.png 500w, ../images/web_1920___3_4x-p-800.png 800w, ../images/web_1920___3_4x-p-1080.png 1080w, ../images/web_1920___3_4x.png 1281w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -317,7 +317,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/artboard___2_4x.png" alt="" srcset="../images/artboard___2_4x.png 500w, ../images/artboard___2_4x.png 800w, ../images/artboard___2_4x.png 1080w, ../images/artboard___2_4x.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/artboard___2_4x.png" alt="" srcset="../images/artboard___2_4x-p-500.png 500w, ../images/artboard___2_4x-p-800.png 800w, ../images/artboard___2_4x-p-1080.png 1080w, ../images/artboard___2_4x.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
